--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,9 @@
     "eslint": "^5.1.0",
     "express": "^4.16.3",
     "morgan": "^1.9.0",
-    "nodemon": "^1.18.1"
+    "nodemon": "^1.18.1",
+    "sequelize": "^4.38.0",
+    "sqlite3": "^4.0.1"
   },
   "devDependencies": {
     "eslint-config-standard": "^12.0.0-alpha.0",
